@@ -1,3 +1,9 @@
+2006-01-16  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c: Added progress bar support for
+	  downloads and uploads. Contributed by 
+	  Dave O <cxreg@pobox.com>.
+
 2006-01-14  Marcus Meissner  <marcus@jet.franken.de>
 
 	* library.c, ptp.c, ptp.h: more --summary output.
